tests/baselines/reference/yieldExpression1.errors.txt
tests/cases/compiler/yieldExpression1.ts(7,5): error TS2322: Type 'undefined' is not assignable to type 'number'.


==== tests/cases/compiler/yieldExpression1.ts (1 errors) ====
    function* a() {
        yield;
        yield 0;
    }
    
    function* b(): IterableIterator<number> {
        yield;
        ~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
        yield 0;
    }
    